[package]
name = "rustool"
version = "0.3.11"
authors = ["Greg Henry <contact@greghenry.xyz>"]
edition = "2018"
description = "Personal toolbox for my Rust projects"
license = "Apache-2.0"
repository = "https://github.com/GregoireHENRY/rustool"
keywords = ["toolbox", "mathematics", "physics", "utility"]
categories = ["accessibility", "algorithms", "mathematics", "science"]

[lib]
name = "tool"
path = "src/lib.rs"

[profile.release]
lto = true

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "rsc/html/docs-header.html" ]

[dependencies]
itertools = "0.10.0"
nalgebra = {version = "0.25.4", features = ["serde-serialize"]}
alga = "0.9.3"
approx = "0.4.0"
log = "0.4"
simplelog = "0.10.0"
serde_json = "1.0"
serde = "1.0.124"
serial_test = "0.5.1"
num-traits = "0.2.14"
